add class for header h1

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <img src="https://raw.githubusercontent.com/dipps18/odin-recipes/main/recipes-images/logo2.png" alt="logo" width="100" />
-      <h1>odin recipes</h1>
+      <h1 class="landing-header">odin recipes</h1>
     </header>
     <main>
       <ul class="cards-container">
