add decription and ingredients
style for format

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -10,6 +10,56 @@
   <body>
     <header>
       <img src="https://raw.githubusercontent.com/dipps18/odin-recipes/main/recipes-images/logo2.png" alt="logo" width="100" />
+      <h1 class="recipe-header">one-pot creamy mushroom vegan pasta</h1>
     </header>
+    <main class="recipe">
+      <img
+        class="recipe-img"
+        src="https://raw.githubusercontent.com/dipps18/odin-recipes/main/recipes-images/Vegan-Mushroom-Pasta.jpg"
+        alt="Vegan Mushroom Pasta"
+        width="350"
+        height="500"
+      />
+      <div class="recipe-description">
+        <h3>description</h3>
+        <p>
+          This mushroom pasta is a new all-time favourite! It's creamy, intensely flavourful, and perfect for days when you might
+          need a big bowl of comfort. Luckily, it's also incredibly quick and easy to make, with all the ingredients simply tossed
+          into one large pot and cooked until al dente!
+        </p>
+        <h3>recipe credits:</h3>
+        <a href="https://www.youtube.com/watch?v=6ZsuGfxIUx8">PickUpLimes - YouTube</a>
+        <br />
+        <a href="https://www.pickuplimes.com/recipe/one-pot-creamy-mushroom-pasta-98">PickUpLimes - Blog</a>
+      </div>
+      <div class="recipe-ingredients">
+        <h3>ingredients</h3>
+        <ul>
+          <li>2 tsp (10 mL) vegetable oil</li>
+          <li>2 shallots, finely chopped</li>
+          <li>6 cloves garlic, minced</li>
+          <li>1 red hot chili, finely minced</li>
+          <li>2 vegetable bouillon cubes*</li>
+          <li>2 cups (480 mL) water*</li>
+          <li>1 2/3 cups (399 mL) canned full-fat coconut milk</li>
+          <li>2 cups (140 g) button mushrooms, thinly sliced</li>
+          <li>2 cups (172 g) oyster mushrooms, thinly sliced</li>
+          <li>14.1 oz (400 g) dry fusilli pasta</li>
+          <li>1/4 cup (38 g) sun-dried tomato in oil, drained, chopped</li>
+          <li>2 Tbsp (19 g) nutritional yeast</li>
+          <li>1 Tbsp (15 mL) sodium-reduced soy sauce</li>
+          <li>1 tsp (2 g) paprika powder</li>
+          <li>1 pinch ground black pepper, plus more to taste</li>
+          <li>1 pinch salt, plus more to taste</li>
+          <li>4 cups (120 g) fresh spinach</li>
+        </ul>
+        <h3>optional garnish</h3>
+        <ul>
+          <li>chili flakes</li>
+          <li>fresh basil</li>
+          <li>lemon slices</li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
