add steps to cook

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -60,6 +60,33 @@
           <li>lemon slices</li>
         </ul>
       </div>
+      <div class="recipe-steps">
+        <h3>steps</h3>
+        <ol>
+          <li>
+            Add the oil to a large pot on high heat. When hot, add the shallots, garlic, and chili, and sauté until lightly
+            golden, about 3 minutes, adding a splash of water as needed to deglaze the pan.
+          </li>
+          <li>
+            Add all of the remaining ingredients to the pot, except for the spinach, and bring to a boil, then reduce to a simmer
+            with the lid partially covered. Stir occasionally to prevent burning.
+          </li>
+          <li>
+            When the pasta is al dente, after about 12 - 15 minutes, remove from the heat and add in the spinach. Stir to combine.
+          </li>
+          <li>
+            Squeeze overtop some fresh lemon juice, sprinkle on thinly sliced basil leaves or some red chilli flakes if desired,
+            and enjoy!
+          </li>
+        </ol>
+        <p>Notes</p>
+        <p>
+          * If desired, the bouillon cubes and water can be substituted for equal parts vegetable stock. Variations: add in some
+          diced red pepper, artichoke, or fresh tomatoes.
+        </p>
+        <p>Storage</p>
+        <p>Store in an airtight container in the fridge for up to 3 days.</p>
+      </div>
     </main>
   </body>
 </html>
