--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -5,11 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Curry</title>
+    <title>Pasta</title>
   </head>
   <body>
     <header>
       <img src="https://raw.githubusercontent.com/dipps18/odin-recipes/main/recipes-images/logo2.png" alt="logo" width="100" />
+      <h1 class="recipe-header">coconut chickpea curry</h1>
     </header>
+    <main class="recipe">
+      <img
+        class="recipe-img"
+        src="https://raw.githubusercontent.com/dipps18/odin-recipes/main/recipes-images/Coconut-Chickpea-Curry-27.jpg"
+        alt="Vegan Mushroom Pasta"
+        width="350"
+        height="500"
+      />
+      <div class="recipe-description">
+        <h3>description</h3>
+        <p>
+          This Creamy Vegan Coconut Chickpea Curry is the BEST curry recipe I've ever tried! All made in one pot, this easy vegan
+          curry is incredibly flavorful, perfect for meal prep, budget-friendly, and one of our go-to weeknight dinners!
+        </p>
+        <h3>recipe credits:</h3>
+        <a href="https://jessicainthekitchen.com/coconut-chickpea-curry-recipe/">Jessica in the kitchen - Blog</a>
+        <br />
+      </div>
+      <div class="recipe-ingredients">
+        <h3>ingredients</h3>
+        <ul>
+          <li>Chickpeas</li>
+          <li>Tomatoes, Onion and Garlic</li>
+          <li>Coconut Milk</li>
+          <li>Coconut Flour</li>
+          <li>Coconut Oil</li>
+          <li>Garam Masala</li>
+          <li>Lime</li>
+        </ul>
+        <h3>additional seasonings</h3>
+        <ul>
+          <li>sea salt</li>
+          <li>ground black pepper</li>
+          <li>curry powder</li>
+          <li>cumin</li>
+          <li>garlic</li>
+        </ul>
+      </div>
+      <div class="recipe-steps">
+        <h3>steps</h3>
+        <ol>
+          <li>Heat the Oil: In a deep pot over medium-high heat, add the coconut oil.</li>
+          <li>
+            Add in the Onions and Tomatoes: Grind some sea salt and ground black pepper over the mixture and stir together. Lower
+            heat to medium and allow to cook down until juices of the tomatoes are naturally released and onions are soft, about
+            10 minutes. I've found that this step really helps to develop the flavors of the dish and break them all down for the
+            seasonings later.
+          </li>
+          <li>Add in the Chickpeas: Also mix in the garlic, garam masala, curry powder and cumin. Stir to combine.</li>
+          <li>
+            Add in the Coconut Milk and Stir Again: Add in the coconut flour (or any flour, optional) which helps to slightly
+            thicken the curry. Bring the curry to a boil, and then reduce to medium-low so that the mixture continues to simmer
+            for 10 to 12 more minutes.
+          </li>
+          <li>
+            Serve and Enjoy: Taste the curry and season with salt and pepper if you desire. Remove the curry from the heat and
+            squeeze a lime lightly over the top of the curry, stirring to combine. Don't skip this step!! Allow to cool slightly
+            and then serve. Enjoy!
+          </li>
+        </ol>
+      </div>
+    </main>
   </body>
 </html>
