--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page</title>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar-container">
+        <a class="header-logo" href="/">Header Logo</a>
+        <ul class="navbar-item-container">
+          <li><a href="/1">header link one</a></li>
+          <li><a href="/2">header link two</a></li>
+          <li><a href="/3">header link three</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero-container">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+        </p>
+        <button>Sign up</button>
+        <div>this is a placeholder for an image</div>
+      </section>
+      <section class="content-container">
+        <h2>Some random information.</h2>
+        <div class="subtext-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="subtext-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="subtext-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="subtext-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </section>
+      <section class="quote-container">
+        <p id="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe it's just fulling up space, or maybe people will
+          actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p id="quote-author">-Thor, God of Thunder</p>
+      </section>
+      <section class="cta-container">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+      </section>
+      <footer>
+        <p>Copyright &copy The Odin Project 2021</p>
+      </footer>
+    </main>
+  </body>
 </html>
