--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar-container">
-        <a class="header-logo" href="/">Header Logo</a>
-        <ul class="navbar-item-container">
-          <li><a href="/1">header link one</a></li>
-          <li><a href="/2">header link two</a></li>
-          <li><a href="/3">header link three</a></li>
-        </ul>
-      </nav>
-    </header>
     <main>
       <section class="hero-container">
+        <nav class="navbar-container">
+          <a class="header-logo" href="/">Header Logo</a>
+          <ul class="navbar-item-container">
+            <li><a href="/1">header link one</a></li>
+            <li><a href="/2">header link two</a></li>
+            <li><a href="/3">header link three</a></li>
+          </ul>
+        </nav>
         <h1>This website is awesome</h1>
         <p>
           This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
