reformat hero elements

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -9,23 +9,28 @@
   </head>
   <body>
     <main>
-      <section class="hero-container">
+      <section class="hero-container side-padding">
         <nav class="navbar-container">
-          <a class="header-logo" href="/">Header Logo</a>
+          <a id="header-logo" href="/">Header Logo</a>
           <ul class="navbar-item-container">
             <li><a href="/1">header link one</a></li>
             <li><a href="/2">header link two</a></li>
             <li><a href="/3">header link three</a></li>
           </ul>
         </nav>
-        <h1>This website is awesome</h1>
-        <p>
-          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-        </p>
-        <button>Sign up</button>
-        <div>this is a placeholder for an image</div>
+        <div class="hero-content-container">
+          <div class="hero-text">
+            <h1>This website is awesome</h1>
+            <p>
+              This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+              contrast
+            </p>
+            <button>Sign up</button>
+          </div>
+          <div class="hero-image">this is a placeholder for an image</div>
+        </div>
       </section>
-      <section class="content-container">
+      <section class="content-container side-padding">
         <h2>Some random information.</h2>
         <div class="subtext-container">
           <div></div>
@@ -44,19 +49,19 @@
           <p>this is some subtext under an illustration or image</p>
         </div>
       </section>
-      <section class="quote-container">
+      <section class="quote-container side-padding">
         <p id="quote">
           This is an inspiring quote, or a testimonial from a customer. Maybe it's just fulling up space, or maybe people will
           actually read it. Who knows? All I know is that it looks nice.
         </p>
         <p id="quote-author">-Thor, God of Thunder</p>
       </section>
-      <section class="cta-container">
+      <section class="cta-container side-padding">
         <h3>Call to action! It's time!</h3>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
       </section>
-      <footer>
+      <footer class="side-padding">
         <p>Copyright &copy The Odin Project 2021</p>
       </footer>
     </main>
