move footer out of main

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -32,21 +32,23 @@
       </section>
       <section class="content-container side-padding">
         <h2>Some random information.</h2>
-        <div class="subtext-container">
-          <div></div>
-          <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="subtext-container">
-          <div></div>
-          <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="subtext-container">
-          <div></div>
-          <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="subtext-container">
-          <div></div>
-          <p>this is some subtext under an illustration or image</p>
+        <div class="subtext-main-container">
+          <div class="subtext-container">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="subtext-container">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="subtext-container">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="subtext-container">
+            <div></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
         </div>
       </section>
       <section class="quote-container side-padding">
@@ -57,13 +59,15 @@
         <p id="quote-author">-Thor, God of Thunder</p>
       </section>
       <section class="cta-container side-padding">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="cta-text-container">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button id="cta-button">Sign up</button>
       </section>
-      <footer class="side-padding">
-        <p>Copyright &copy The Odin Project 2021</p>
-      </footer>
     </main>
+    <footer class="side-padding">
+      <p>Copyright &copy The Odin Project 2021</p>
+    </footer>
   </body>
 </html>
