--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -7,6 +7,9 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <button class="choice-btns">Rock</button>
+    <button class="choice-btns">Paper</button>
+    <button class="choice-btns">Scissors</button>
     <script src="./app.js"></script>
   </body>
 </html>
