--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -7,6 +7,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <div class="results">Start</div>
     <button class="choice-btns">Rock</button>
     <button class="choice-btns">Paper</button>
     <button class="choice-btns">Scissors</button>
