display score changes each game

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="results">Start</div>
+    <div class="scores">Player: 0 --- Computer: 0</div>
     <button class="choice-btns">Rock</button>
     <button class="choice-btns">Paper</button>
     <button class="choice-btns">Scissors</button>
