reset score when max is reached

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -7,7 +7,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <div class="results">Start</div>
+    <div class="results">Will you win or lose? Get 5 points to find out!</div>
     <div class="scores">Player: 0 --- Computer: 0</div>
     <button class="choice-btns">Rock</button>
     <button class="choice-btns">Paper</button>
