--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -7,6 +7,7 @@
     <title>Etch-A-Sketch</title>
   </head>
   <body>
+    <div class="square-container"></div>
     <script src="./app.js"></script>
   </body>
 </html>
