add notes for refactor

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <button class="popup">Button</button>
     <div class="square-container"></div>
     <script src="./app.js"></script>
   </body>
