change class name to grid

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <button class="popup">Button</button>
-    <div class="square-container"></div>
+    <div class="grid"></div>
     <script src="./app.js"></script>
   </body>
 </html>
