add type module in script

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -10,6 +10,6 @@
   <body>
     <button class="popup">Button</button>
     <div class="grid"></div>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
