--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <button class="popup">Button</button>
-    <div class="grid"></div>
+    <div class="grid-container">
+      <button class="popup">Button</button>
+      <div class="grid"></div>
+    </div>
     <script type="module" src="./app.js"></script>
   </body>
 </html>
