add name for button

--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="grid-container">
-      <button class="popup">Button</button>
+      <button class="popup">New Grid</button>
       <div class="grid"></div>
     </div>
     <script type="module" src="./app.js"></script>
