--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+  </head>
+  <body>
+    <table class="calc-container">
+      <tr>
+        <td class="calc-result"></td>
+        <td class="calc-buttons">C</td>
+      </tr>
+      <tr>
+        <td class="calc-buttons">7</td>
+        <td class="calc-buttons">8</td>
+        <td class="calc-buttons">9</td>
+        <td class="calc-buttons">/</td>
+      </tr>
+      <tr>
+        <td class="calc-buttons">4</td>
+        <td class="calc-buttons">5</td>
+        <td class="calc-buttons">6</td>
+        <td class="calc-buttons">*</td>
+      </tr>
+      <tr>
+        <td class="calc-buttons">1</td>
+        <td class="calc-buttons">2</td>
+        <td class="calc-buttons">3</td>
+        <td class="calc-buttons">-</td>
+      </tr>
+      <tr>
+        <td class="calc-buttons">0</td>
+        <td class="calc-buttons">.</td>
+        <td class="calc-buttons">=</td>
+        <td class="calc-buttons">+</td>
+      </tr>
+    </table>
+  </body>
 </html>
