--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <table class="calc-container">
@@ -37,5 +38,7 @@
         <td class="calc-buttons">+</td>
       </tr>
     </table>
+
+    <script src="app.js"></script>
   </body>
 </html>
