Make each button a square

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,7 +10,7 @@
   <body>
     <table class="calc-container">
       <tr>
-        <td class="calc-result"></td>
+        <td class="calc-result calc-buttons"></td>
         <td class="calc-buttons">C</td>
       </tr>
       <tr>
