Change table to divs

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,36 +8,30 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <table class="calc-container">
-      <tr>
-        <td class="calc-result calc-buttons"></td>
-        <td class="calc-buttons">C</td>
-      </tr>
-      <tr>
-        <td class="calc-buttons">7</td>
-        <td class="calc-buttons">8</td>
-        <td class="calc-buttons">9</td>
-        <td class="calc-buttons">/</td>
-      </tr>
-      <tr>
-        <td class="calc-buttons">4</td>
-        <td class="calc-buttons">5</td>
-        <td class="calc-buttons">6</td>
-        <td class="calc-buttons">*</td>
-      </tr>
-      <tr>
-        <td class="calc-buttons">1</td>
-        <td class="calc-buttons">2</td>
-        <td class="calc-buttons">3</td>
-        <td class="calc-buttons">-</td>
-      </tr>
-      <tr>
-        <td class="calc-buttons">0</td>
-        <td class="calc-buttons">.</td>
-        <td class="calc-buttons">=</td>
-        <td class="calc-buttons">+</td>
-      </tr>
-    </table>
+    <div class="calc-container">
+      <div class="calc-result"></div>
+      <button class="calc-buttons">C</button>
+
+      <button class="calc-buttons">7</button>
+      <button class="calc-buttons">8</button>
+      <button class="calc-buttons">9</button>
+      <button class="calc-buttons">/</button>
+
+      <button class="calc-buttons">4</button>
+      <button class="calc-buttons">5</button>
+      <button class="calc-buttons">6</button>
+      <button class="calc-buttons">*</button>
+
+      <button class="calc-buttons">1</button>
+      <button class="calc-buttons">2</button>
+      <button class="calc-buttons">3</button>
+      <button class="calc-buttons">-</button>
+
+      <button class="calc-buttons">0</button>
+      <button class="calc-buttons">.</button>
+      <button class="calc-buttons">=</button>
+      <button class="calc-buttons">+</button>
+    </div>
 
     <script src="app.js"></script>
   </body>
