--- a/calculator/index.html
+++ b/calculator/index.html
@@ -33,6 +33,6 @@
       <button class="calc-buttons">+</button>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
